--- a/.github/workflows/codespace-execution.yml
+++ b/.github/workflows/codespace-execution.yml
@@ -3,13 +3,12 @@ name: Codespace Execution Every 6 Hours
 on:
   schedule:
     - cron: "0 */6 * * *"  # Runs every 6 hours
-  workflow_dispatch:
+  workflow_dispatch:  # Allows you to manually trigger the workflow
 
 jobs:
   start-codespace:
     runs-on: ubuntu-latest
     steps:
-      # Install GitHub CLI (if not already installed)
       - name: Install GitHub CLI
         run: |
           if ! gh --version; then
@@ -20,7 +19,7 @@ jobs:
       - name: Authenticate GitHub CLI
         run: echo "${{ secrets.CODESPACES_TOKEN }}" | gh auth login --with-token
 
-      # List Codespaces to get the specific one (include repo flag for specificity)
+      # List Codespaces to get the specific one (with repo name)
       - name: Get Codespace ID
         id: get-codespace
         run: |
