--- a/.github/workflows/run-pipeline-workflow.yml
+++ b/.github/workflows/run-pipeline-workflow.yml
@@ -9,6 +9,7 @@ jobs:
   start-codespace:
     runs-on: ubuntu-latest
     steps:
+      # Install GitHub CLI (if not already installed)
       - name: Install GitHub CLI
         run: |
           if ! gh --version; then
@@ -19,21 +20,9 @@ jobs:
       - name: Authenticate GitHub CLI
         run: echo "${{ secrets.CODESPACES_TOKEN }}" | gh auth login --with-token
 
-      # List Codespaces to get the specific one (with repo name)
-      - name: Get Codespace ID
-        id: get-codespace
-        run: |
-          CODESPACE_ID=$(gh codespace list --repo aman-rlf/rentlondonflat-pipeline --json name,id,state -q '.[] | select(.name == "stunning-winner-jjqrgg97pw4p2q97j") | .id')
-          if [ -z "$CODESPACE_ID" ]; then
-            echo "Error: Codespace not found!" && exit 1
-          fi
-          echo $CODESPACE_ID > codespace_id.txt
-          cat codespace_id.txt
-
-      # Start the specific Codespace
+      # Start the specific Codespace directly using the known name
       - name: Start Codespace
-        if: always()
-        run: gh codespace start --repo aman-rlf/rentlondonflat-pipeline --codespace "$(cat codespace_id.txt)"
+        run: gh codespace start --repo aman-rlf/rentlondonflat-pipeline --codespace stunning-winner-jjqrgg97pw4p2q97j
 
       # Wait for Codespace to be ready
       - name: Wait for Codespace to start
@@ -41,9 +30,9 @@ jobs:
 
       # Execute the pipeline script inside the Codespace
       - name: Execute Pipeline Script
-        run: gh codespace ssh --command "python3 /workspaces/rentlondonflat-pipeline/sql_database_pipeline.py" --codespace "$(cat codespace_id.txt)"
+        run: gh codespace ssh --command "python3 /workspaces/rentlondonflat-pipeline/sql_database_pipeline.py" --codespace stunning-winner-jjqrgg97pw4p2q97j
 
       # Stop the Codespace after running the script
       - name: Stop Codespace
         if: always()
-        run: gh codespace stop --repo aman-rlf/rentlondonflat-pipeline --codespace "$(cat codespace_id.txt)"
+        run: gh codespace stop --repo aman-rlf/rentlondonflat-pipeline --codespace stunning-winner-jjqrgg97pw4p2q97j
