--- a/.github/workflows/run-pipeline-workflow.yml
+++ b/.github/workflows/run-pipeline-workflow.yml
@@ -8,8 +8,6 @@ on:
 jobs:
   start-codespace:
     runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ secrets.CODESPACES_TOKEN }}  # Set GH_TOKEN environment variable
     steps:
       # Install GitHub CLI using the official repository for the latest version
       - name: Install GitHub CLI
@@ -25,6 +23,11 @@ jobs:
           # Update and install gh
           sudo apt update
           sudo apt install gh -y
+
+      # Authenticate using the Personal Access Token stored as a secret
+      - name: Authenticate GitHub CLI
+        run: |
+          gh auth login --hostname github.com --git-protocol https --token "${{ secrets.CODESPACES_TOKEN }}"
 
       # Verify Authentication
       - name: Verify GitHub CLI Authentication
@@ -46,7 +49,7 @@ jobs:
       # Retrieve the Codespace Name (Ensures the Codespace is correctly identified)
       - name: Get Codespace Name
         run: |
-          CODESPACE_NAME=$(gh codespace list --repo aman-rlf/rentlondonflat-pipeline --json name,state -q '.[] | select(.name == "stunning-winner-jjqrgg97pw4p2q97j") | .name')
+          CODESPACE_NAME=$(gh codespace list --repo aman-rlf/rentlondonflat-pipeline --json name,state -q '.[] | select(.displayName == "stunning-winner-jjqrgg97pw4p2q97j") | .name')
           echo "CODESPACE_NAME=${CODESPACE_NAME}" >> $GITHUB_ENV
 
       # Execute the pipeline script inside the Codespace
