Updated config.toml and also workflow

--- a/.github/workflows/run_rlf_pipeline_workflow.yml
+++ b/.github/workflows/run_rlf_pipeline_workflow.yml
@@ -1,7 +1,7 @@
 name: Run rlf_pipeline pipeline from sql_database_pipeline.py
 'on':
   schedule:
-  - cron: 0 */6 * * *
+  - cron: 0 5 * * *
   workflow_dispatch: null
 env:
   DESTINATION__BIGQUERY__LOCATION: europe-west2
