--- a/.github/workflows/run_rlf_pipeline_workflow.yml
+++ b/.github/workflows/run_rlf_pipeline_workflow.yml
@@ -8,7 +8,7 @@ env:
   SCHEMA__NAMING: direct
   SOURCES__SQL_DATABASE__CREDENTIALS__DRIVERNAME: mysql+pymysql
   SOURCES__SQL_DATABASE__CREDENTIALS__DATABASE: appsheet_dev
-  SOURCES__SQL_DATABASE__CREDENTIALS__USERNAME: appsheet
+  SOURCES__SQL_DATABASE__CREDENTIALS__USERNAME: ADMIN2024
   SOURCES__SQL_DATABASE__CREDENTIALS__HOST: 35.197.224.72
   SOURCES__SQL_DATABASE__CREDENTIALS__PORT: '3306'
   DESTINATION__BIGQUERY__CREDENTIALS__PROJECT_ID: dashboard-379816
